<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="com.androidfood.mvvm.callback.ActionCallback" />
    </data>



    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".ui.auth.SignupFragment">


            <include
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/loading_view"
                android:id="@+id/loadingView"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/signup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/signup_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/signup_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_title"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:text="@string/signup_desc"
                android:textAlignment="center"
                android:textColor="@color/grey_15"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/signup_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_desc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="OR"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/signup_social_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_or"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/google_button" />

                <Space
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/facebook_button" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_name_ip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_social_view"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:hint="@string/full_name"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/grey_15"
                app:hintTextColor="@color/grey_15">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/grey_35" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email_ip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_name_ip"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:hint="@string/login_email_label"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/grey_15"
                app:hintTextColor="@color/grey_15">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/grey_35" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_phone_ip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_email_ip"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:hint="@string/login_phone_label"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/grey_15"
                app:hintTextColor="@color/grey_15">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/grey_35" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_address_ip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_phone_ip"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:hint="@string/login_address_label"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/grey_15"
                app:hintTextColor="@color/grey_15">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/grey_35" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_pass_ip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_address_ip"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/grey_15"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/grey_15">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@color/grey_35" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_cun_ip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_pass_ip"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:hint="@string/con_pass"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/grey_15"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/grey_15">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textColor="@color/grey_35" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/signup_cun_ip"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/bg_primary"
                android:fontFamily="@font/gotham_medium"
                android:onClick="@{(v) -> callback.onBindingClick(v)}"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_20sdp"/>

            <TextView
                android:id="@+id/signup_signup_link"
                android:layout_width="wrap_content"
                android:layout_below="@+id/signup_btn"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="?attr/actionBarItemBackground"
                android:fontFamily="@font/gotham_medium"
                android:onClick="@{(v) -> callback.onBindingClick(v)}"
                android:textColor="@color/grey_15"
                android:textSize="@dimen/_11sdp"
                app:renderHtml="@{@string/signup_bottom_txt}" />

        </RelativeLayout>

    </ScrollView>


</layout>
