<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="com.androidfood.mvvm.callback.ActionCallback" />
    </data>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/loading_view"
            android:id="@+id/loadingView"
            android:visibility="gone"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:src="@drawable/ic_arrow_back_icon"
                app:tint="@color/black"
                android:id="@+id/backArrow"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="casual"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="casual"
                android:text="@string/forgot_password_desc"
                android:textColor="@color/grey_15"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@android:color/transparent"
                android:hint="Email Address"
                app:boxBackgroundColor="@android:color/transparent"
                app:startIconDrawable="@android:drawable/sym_action_email"
                android:id="@+id/forgetEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/forget_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/bg_primary"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/forgot_password_btn"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:onClick="@{(v) -> callback.onBindingClick(v)}"/>


        </LinearLayout>


    </RelativeLayout>


</layout>