<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="com.androidfood.mvvm.callback.ActionCallback" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.auth.LoginFragment">


        <include
            android:id="@+id/loadingView"
            layout="@layout/loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:id="@+id/login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/login_desc"
            android:textAlignment="center"
            android:textColor="@color/grey_15"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/login_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="OR"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:id="@+id/login_social_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_or"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="1"
                android:background="@drawable/google_button"
                android:id="@+id/googleLogin"
                android:onClick="@{(v) -> callback.onBindingClick(v)}"/>

            <Space
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="1"
                android:background="@drawable/facebook_button" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_social_view"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:hint="@string/login_email_label"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/grey_15"
            app:hintTextColor="@color/grey_15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/grey_35" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_email"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/grey_15"
            app:hintTextColor="@color/grey_15"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/grey_35" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/login_password"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_primary"
            android:fontFamily="@font/gotham_medium"
            android:onClick="@{(v) -> callback.onBindingClick(v)}"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />


        <TextView
            android:id="@+id/TV_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:onClick="@{(v) -> callback.onBindingClick(v)}"
            android:text="Forot Password?"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:id="@+id/login_signup_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="?attr/actionBarItemBackground"
            android:fontFamily="@font/gotham_medium"
            android:onClick="@{(v) -> callback.onBindingClick(v)}"
            android:textColor="@color/grey_15"
            android:textSize="@dimen/_11sdp"
            app:renderHtml="@{@string/login_bottom_txt}" />
    </RelativeLayout>
</layout>
